commit fin projet

--- a/TP2_manip_BARBOT/nbproject/project.properties
+++ b/TP2_manip_BARBOT/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TP2_manip_BARBOT
-main.class=tp2_manip_barbot.TP2_manip_BARBOT
+main.class=TP2_manip_BARBOT
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
